overflow issues

--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  @apply !overflow-hidden bg-bg;
+  @apply !overflow-x-hidden bg-bg;
 }
 
 button {
@@ -48,7 +48,7 @@ button {
 }
 
 .weather-container {
-  @apply fixed inset-0 pointer-events-none overflow-hidden z-50;
+  @apply fixed inset-0 pointer-events-none overflow-x-hidden z-50;
 }
 
 .leaf {
